frontend/test/should_pass/bitbucket25.grg
package x {
        rule a() {
                iterated {
                        :Node;
                        modify {
						---
                                exec(b());
                        }
                }
                modify {
				---
                        exec(b());
                }
        }
        rule b() {
        }
}

package y {
        rule a() {
                iterated {
                        :Node;
                        modify {
						---
                                exec(y::b());
                        }
                }
                modify {
				---
                        exec(y::b());
                }
        }
        rule b() {
        }
}
