frontend/test/should_fail/repl_000b.grg
rule r modify(b:Node) {
	a:Node;
	
	modify {
		a-->b;
	}
}